force-app/main/default/objects/Course_Sessions__c/Course_Sessions__c.object-meta.xml
<CustomObject>
    <label>Course Sessions</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Course Sessions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>