force-app/main/default/objects/Course_Sessions__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Course Sessions</relationshipLabel>
    <relationshipName>Course_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>