force-app/main/default/objects/Course_Sessions__c/fields/Course_Module__c.field-meta.xml
<CustomField>
    <fullName>Course_Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Module</label>
    <referenceTo>Course_Module__c</referenceTo>
    <relationshipLabel>Course Sessions</relationshipLabel>
    <relationshipName>Course_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>