force-app/main/default/objects/Course_Sessions__c/fields/Session_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Session_Sequence__c</fullName>
    <label>Session Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>