force-app/main/default/objects/Course_Sessions__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <formula>&apos;https://www.youtube.com/embed/&apos;+mid(Video_Link__c,33,20)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL</label>
    <type>Text</type>
</CustomField>