force-app/main/default/objects/Course_Sessions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Session_Name__c</columns>
    <columns>Session_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Video_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>4/17/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>Course_Module__c</field>
        <operation>notContain</operation>
    </filters>
    <filters>
        <field>Session_Type__c</field>
        <operation>notContain</operation>
    </filters>
    <label>All</label>
</ListView>